--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,25 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # dependencies
-node_modules/
+/node_modules/
+/backend/node_modules/
+/sensor-simulator/node_modules/
 
 # Expo
-.expo/
-dist/
-web-build/
-expo-env.d.ts
+/app/.expo/
+/app/web-build/
+/app/dist/
+/app/expo-env.d.ts
 
+# generated native folders - ini untuk folder di root project
+/ios
+/android
+
+# Tambahkan baris ini agar folder app/ tidak terabaikan:
+/app/.expo
+/app/node_modules
+/app/web-build
+/app/dist
 # Native
 .kotlin/
 *.orig.*
