--- a/app/package.json
+++ b/app/package.json
@@ -10,19 +10,26 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^7.8.2",
     "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.3.0",
+    "@supabase/supabase-js": "^2.77.0",
     "expo": "~54.0.22",
     "expo-constants": "~18.0.10",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-notifications": "~0.32.12",
+    "expo-secure-store": "~14.0.5",
+    "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~3.0.8",
     "mqtt": "^5.14.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.22.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "private": true
 }
