--- a/app/app.json
+++ b/app/app.json
@@ -1,16 +1,16 @@
 {
   "expo": {
-    "name": "IOTWatch",
+    "name": "IOTWatch_Kel13",
     "slug": "iotwatch-slug",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/mentahan_kel13.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/mentahan_kel13.png",
       "resizeMode": "contain",
-      "backgroundColor": "#2563eb"
+      "backgroundColor": "#ffffff"
     },
     "ios": {
       "supportsTablet": true,
@@ -20,13 +20,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#2563eb"
+        "foregroundImage": "./assets/mentahan_kel13.png",
+        "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/mentahan_kel13png"
     },
     "extra": {
       "backendUrl": "http://192.168.43.162:5000",
